cmake_minimum_required(VERSION 2.8.11 FATAL_ERROR)
project(APlusPlus CXX)
if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU" OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wno-switch")
endif()
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -O3")
add_subdirectory(libHepEvent)
add_subdirectory(libHepUtils)
add_subdirectory(libAtlasRun)
add_subdirectory(libAtlasEvent)
add_subdirectory(libAtlasAnalysis)
add_subdirectory(libKinFitter)
add_subdirectory(libAtlasFinders)
add_subdirectory(libSingleTop)
